--- a/main.html
+++ b/main.html
@@ -74,9 +74,8 @@
             </div>
             <div class="form-group">
                 <label>Gender*</label>
-                <label><input type="radio" name="gender" value="male" required> Male</label>
-                <label><input type="radio" name="gender" value="female" required> Female</label>
-                <label><input type="radio" name="gender" value="other" required> Other</label>
+                <label for="male"><input type="radio" id="male" name="gender" value="male" required> Male</label>
+                <label for="female"><input type="radio" id="female" name="gender" value="female" required> Female</label>
             </div>
             <div class="form-group">
                 <label for="laptop">Laptop Brands</label>
